[package]
name = "open-cypher"
version = "0.1.0"
edition = "2021"
authors = ["Austin Poor <code@austinpoor.com"]
description = "A rust library for parsing openCyper queries."
documentation = "https://docs.rs/open-cypher"
readme = "README.md"
homepage = "https://github.com/a-poor/open-cypher"
repository = "https://github.com/a-poor/open-cypher"
license = "MIT"
keywords = ["sql", "cypher", "graph", "parser"]
categories = ["parser-implementations"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"

